force-app/main/default/objects/Property_Listing__c/fields/Competitive_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Analysis__c</fullName>
    <label>Competitive Analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>