force-app/main/default/objects/Property_Listing__c/fields/Discount_From_Market__c.field-meta.xml
<CustomField>
    <fullName>Discount_From_Market__c</fullName>
    <label>Discount From Market</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>