force-app/main/default/objects/Property_Listing__c/fields/Listing_Price__c.field-meta.xml
<CustomField>
    <fullName>Listing_Price__c</fullName>
    <label>Listing Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>