force-app/main/default/objects/Property_Listing__c/fields/Listing_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Listing_Strategy__c</fullName>
    <label>Listing Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>