force-app/main/default/objects/Property_Listing__c/fields/Market_Analysis_Price__c.field-meta.xml
<CustomField>
    <fullName>Market_Analysis_Price__c</fullName>
    <label>Market Analysis Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>