force-app/main/default/objects/Property_Listing__c/fields/Price_Per_SqFt__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_SqFt__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Property__c)),
        NOT(ISBLANK(Square_Footage__c)),
        Square_Footage__c &gt; 0
    ),
    Listing_Price__c / Square_Footage__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Per SqFt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>