force-app/main/default/objects/Property_Listing__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Property_Listings</relationshipName>
    <type>Lookup</type>
</CustomField>