force-app/main/default/objects/Property_Listing__c/listViews/Commercial_Sales_Team_Property_Listing.listView-meta.xml
<ListView>
    <fullName>Commercial_Sales_Team_Property_Listing</fullName>
    <filterScope>Queue</filterScope>
    <label>Commercial Sales Team</label>
    <queue>Commercial_Sales_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>