force-app/main/default/objects/Property_Listing__c/listViews/Marketing_Team_Property_Listing.listView-meta.xml
<ListView>
    <fullName>Marketing_Team_Property_Listing</fullName>
    <filterScope>Queue</filterScope>
    <label>Marketing Team</label>
    <queue>Marketing_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>